v5.9
-----
+ Added a link on user profiles to their wishlist
: Fixed a bug that caused hiding DLC for unowned games not to work under certain circumstances


v5.8
-----
+ Added extended options for DLC checkboxes that are accessible by clicking "Options ▾".
+ Added price options to search results pages letting you easily filter results by price
+ Added speech input option to search boxes on store pages
+ Incorporated coupon codes into lowest price data
+ The "Remove" links on the wishlist no longer require the page to reload
+ Added an option to disable Early Access image overlays
: Fixed a bug in market transaction total caused by change in API by Valve
- Removed language selection dropdown in options page to reduce confusion

v5.7
-----
+ Adds Steam review percentage of most helpful positive and negative reviews on app pages
+ "Hide -> DLC for games you do not own" now works with the new releases section on the homepage
+ Added new option to hide owned games on the homepage
+ Added Square Enix and Bundle Stars sites to price history information
: Price history now shows for all apps on a store page, not just the first
: Fixed a bug that caused early access banners on the "featured" section to not position correctly
: Fixed a bug that caused regional pricing on sale pages to sometimes display incorrectly
: Fixed a bug that broke formatting on badge page when crafting badges in certain situations 

v5.6.1
-----
: Fix Early Access overlays on Steam homepage

v5.6
-----
+ Added ability to add a custom amount to your Steam wallet
+ Added checkboxes to DLC list on app pages, letting you select certain DLC and add to cart easily
+ Added sort option to badge page to sort by number of card drops remaining
+ Added card prices to market links on badge pages
+ Added "cost to complete badge" to unobtained badges
+ Added option to display advanced navigation on inventory pages
+ Added foil badge and foil badge progress to app pages